css/blog.css
.container {
    padding: 0px;
}
#blog {
    width: 100%;
    display: flex;
}
#blognav {
    width: 100px;
    background-color: var(--grey3);
    box-shadow: 0.5px 0 4px 0px rgba(48, 45, 45, 0.6);
    padding-top: 14px;
    display: flex;
    flex-direction: column;
}
.button {
    position: relative;
    display: inline-block;
    margin: 0px 14px 14px 14px
}
.button .tooltip {
    visibility: hidden;
    width: auto;
    white-space: nowrap;
    height: 20px;
    background-color: var(--grey2);
    color: var(--grey4);
    text-align: center;
    border-radius: 6px;
    padding: 5px 10px;
    position: absolute;
    z-index: 2;
    top: calc(50% - 15px);
    left: 120%;
    opacity: 0;
    transition: all 0.25s;
}
.button .tooltip::after {
    content: "";
    position: absolute;
    top: 50%;
    right: 100%;
    margin-top: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent var(--grey2) transparent transparent;
}
.button:hover .tooltip {
    visibility: visible;
    opacity: 1;
}
#blognav img {
    width: 70px;
    height: 70px;
    object-fit: cover;
    display: block;
}
#blogcontent {
    width: 100%;
    padding-top: 10px;
}
.wrapper {
    padding: 20px 0px;
    width: 100%;
    display: flex;
    align-items: center;
}
.wrapper::after {
    content: "";
    clear: both;
    display: table;
}
.square {
    width: 50%;
    padding-bottom: 50%;
    position: relative;
    display: flex;
}
#thumbnail {
    width: calc(100% - 40px);
    height: calc(100% - 40px);
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    object-fit: cover;
    padding: 20px;
}
#bloghead {
    padding-left: 20px;
    width: calc(50% - 20px);
}
.blogbody {
    width: 100%;
}
.wrapper > .img {
    width: calc(50% - 20px);
    padding: 0px 20px;
    display: flex;
    justify-content: center;
}
.wrapper > .img > img {
    max-height: 100%;
    max-width: 100%;
}
.wrapper > .text {
    height: 20%;
    width: 50%;
    padding-left: 20px;
}
h1 {
    margin: 10px 0px;
}
@media screen and (max-width: 800px) {
    #blogbody {
        padding-bottom: 50px;
    }
    .wrapper {
        flex-direction: column;
        padding: 5px 0px;
    }
    #header {
        padding: 0px;
        padding-top: 50px;
    }
    .wrapper > .img {
        width: 80%;
        text-align: center;
        padding: 0px;
        padding-bottom: 20px;
    }
    .wrapper > .text {
        width: calc(90% - 20px);
        text-align: center;
        margin: 0px;
        padding: 10px;
    }
    .square {
        width: 80%;
        padding-bottom: 80%;
    }
    #thumbnail {
        padding: 0px;
        width: 100%;
        height: 100%;
    }
    #bloghead {
        width: calc(100% - 20px);
        text-align: center;
        padding: 10px;
    }
    .wrapper p {
        font-size: 14px;
    }
    .noimg {
        display: none;
    }
    .wrapper > .noimg {
        padding: 0px;
    }
}

